<resources>
    <string name="app_name">LastMinute Meal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Main Activity Strings -->
    <string name="meal_type">Type of food</string>
    <string name="radius_meters">Distance</string>
    <string name="establishment_restaurant">Restaurant</string>
    <string name="establishment_bar">Bar</string>
    <string name="establishment_cafe">Cafe</string>
    <string name="establishment_all">All</string>
    <string name="meal_0">All</string>
    <string name="meal_1">Italian</string>
    <string name="meal_2">Latin</string>
    <string name="meal_3">Tapas</string>
    <string name="meal_4">Sandwich</string>
    <string name="meal_5">Mexican</string>
    <string name="establish_type">Establishments</string>
    <string name="distance_0">500 m</string>
    <string name="distance_1">1 Km</string>
    <string name="distance_2">2,5 Km</string>
    <string name="distance_3">5 Km</string>
    <string name="distance_4">10 Km</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="settings">Settings</string>

    <!-- Menú -->
    <string name="reserva">Booking</string>
    <string name="valoraciones">Valorations</string>
    <string name="tools">Configuration</string>
    <string name="session">Session</string>
    <string name="logout">Log Out</string>

    <!-- Realizar reserva -->
    <string name="npersons">Number of people</string>
    <string name="hour">Time</string>
    <string name="confirm_npersons">Confirm time and number of people</string>
    <string name="reserva_now">Book now</string>
    <string name="menu">Menu</string>

    <!-- Seleccionar menús -->
    <string name="first">First dish</string>
    <string name="second">Second dish</string>
    <string name="desert">Desert</string>
    <string name="drink">Drink</string>
    <string name="coffe">Coffe</string>
    <string name="accept">Accept</string>
    <string name="accept_res">Make reservation</string>
    <string name="resumen_pedido">Order summary</string>

    <!-- Valoración -->
    <string name="comment">Commentary</string>
    <string name="rval">Rate it</string>
    <string name="addVal">Add rate</string>
    <string name="addComment">Add comments</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faqs">FAQs</string>
    <string name="realizar_valoracion">Rate it</string>
    <string name="obtener_pase_restaurante">Obtain the restaurant pass</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="restaurant_logo">Restaurant logo</string>
    <string name="todo">TODO</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="booking_id">Booking ID:</string>
    <string name="time">Time:</string>
    <string name="number_of_people">Number of people:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="bookDone">Book done! Wait restaurant confirmation please!</string>
    <string name="restaurantPass">Restaurant pass</string>
    <string name="chooseMenu">Choose your meal</string>
    <string name="bookings">Booking Details</string>
    <string name="rateDone">Thanks for rating the book!</string>
    <string name="wifi_connected">Wi-Fi Connection</string>
    <string name="network_connected">Mobile Network Connection</string>
    <string name="lost_connection">Lost Location</string>
</resources>
